--- a/css/geral/css.css
+++ b/css/geral/css.css
@@ -1,8 +1,12 @@
 /* ___________________CORPO____________________*/
-body, span, p, h1, h2, h3, h4, h5, h6{
+body, span, p, h1, h2, h3, h4, h5, h6, a{
     margin: 0;
     border: 0;
     padding: 0;
+}
+a{
+    text-decoration: none;
+    color: white;
 }
 
 .container{
@@ -33,14 +37,15 @@ body, span, p, h1, h2, h3, h4, h5, h6{
 
 /*____________________FOOTER________________________*/
 .footer{
-    bottom: 0px;
     width: 100%;
     z-index: 999;
     color: white;
     padding: 10px 0;
-    position: fixed;
     font-size: 1.0rem;
     text-align: center;
     position: absolute;
+    left: 0 !important;
+    bottom: 0 !important;
     background-color: black;
+    position: fixed !important;
 }
