Condicional de login estático

--- a/css/geral/css.css
+++ b/css/geral/css.css
@@ -49,3 +49,9 @@ a{
     background-color: black;
     position: fixed !important;
 }
+
+/* ________________________EXTRAS________________________ */
+
+.d-none{
+    display: none;
+}
