Alterações em professores (estático)

--- a/css/todos/professor.css
+++ b/css/todos/professor.css
@@ -16,5 +16,8 @@
     border-radius: 14px;
     background-color: black;
 }
+.d-none{
+    display: none;
+}
 
 /* __________________ATIVIDADE AVALIATIVA___________________ */
