--- a/css/todos/professor.css
+++ b/css/todos/professor.css
@@ -15,9 +15,52 @@
     font-weight: 700;
     border-radius: 14px;
     background-color: black;
+    margin-left: calc(50% - 100px);
 }
 .d-none{
     display: none;
 }
-
+form{
+    width: 510px;
+    padding: 10px;
+    margin-top: 50px;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    border: 1px solid black;
+    margin-left: calc(50% - 260px);
+}
+p{
+    font-weight: 600;
+    font-size: 1.2rem;
+    text-align: center;
+    padding-bottom: 10px;
+}
+.d-none{
+    display: none;
+}
+.p-b{
+    padding-bottom: 10px;
+}
 /* __________________ATIVIDADE AVALIATIVA___________________ */
+.selecao{
+    margin: 15px 0;
+    width: 100% !important;
+    height: 50px !important;
+    
+}
+.select{
+    margin: 0;
+    width: 30%;
+    height: 100%;
+    color: white;
+    cursor: pointer;
+    margin-right: 3%;
+    font-weight: 600;
+    font-size: 1.3rem;
+    transition: all 1s;
+    background-color: black;
+}
+.select:hover{
+    border-top-left-radius: 34px;
+    border-bottom-right-radius: 34px;
+}
