--- a/css/todos/gerenciador.css
+++ b/css/todos/gerenciador.css
@@ -1,10 +1,5 @@
-.turma{
-    font-weight: 700;
-    font-size: 1.3rem;
-    padding: 20px 0 10px 0;
-}
 .input{
-    width: 500px;
+    width: 100%;
     margin-bottom: 10px;
 }
 .btn{
@@ -40,7 +35,7 @@ p{
 .p-b{
     padding-bottom: 10px;
 }
-/* __________________ATIVIDADE AVALIATIVA___________________ */
+
 .selecao{
     margin: 15px 0;
     width: 100% !important;
@@ -49,11 +44,11 @@ p{
 }
 .select{
     margin: 0;
-    width: 30%;
+    width: 20%;
     height: 100%;
     color: white;
     cursor: pointer;
-    margin-right: 3%;
+    margin-left: 4%;
     font-weight: 600;
     font-size: 1.3rem;
     transition: all 1s;
@@ -63,23 +58,7 @@ p{
     border-top-left-radius: 34px;
     border-bottom-right-radius: 34px;
 }
-/* ___________________NOTAS E FALTAS__________________________ */
-.titulo_nf{
-    font-size: 1.3rem;
-    text-align: center;
-    padding: 30px 0 0 0;
-}
-.cabecalho-t-nf{
-    width: 100%;
-    color: white;
-    background-color: black;
-}
-.cabecalho-t-nf, th{
-    padding: 1px 6px;
-}
-.notas_faltas, th{
+.borda{
     border: 1px solid black;
-}
-.notas_faltas{
-    margin: auto;
+    padding: 10px;
 }
