--- a/css/todos/aluno.css
+++ b/css/todos/aluno.css
@@ -46,3 +46,9 @@ th{
     padding-top: 5px;
     font-size: 1.2rem;
 }
+
+/*_____________________________________*/
+
+.mb-30{
+    margin-bottom: 30px;
+}
