--- a/css/geral/css.css
+++ b/css/geral/css.css
@@ -1,8 +1,18 @@
+/*
+preto - rgba(0,0,0,1)
+verde - rgba(35,219,81,1)
+#1A1AEB azul
+background: linear-gradient(18deg, rgba(0,0,0,1) 44%, rgba(35,219,81,1) 100%);
+*/
+
 /* ___________________CORPO____________________*/
 body, span, p, h1, h2, h3, h4, h5, h6, a{
     margin: 0;
     border: 0;
     padding: 0;
+}
+body{
+    background: linear-gradient(8deg, rgba(53,97,98,1) 44%, rgba(102,212,129,1) 100%);
 }
 a{
     text-decoration: none;
@@ -33,6 +43,9 @@ a{
     cursor: pointer;
     text-align: center;
 }
+.header_op:hover{
+    background: radial-gradient(circle, rgba(35,219,81,1) 0%, rgba(0,0,0,1) 100%);
+}
 
 
 /*____________________FOOTER________________________*/
@@ -49,9 +62,34 @@ a{
     background-color: black;
     position: fixed !important;
 }
+.footer:hover{
+    background: radial-gradient(circle, rgba(35,219,81,1) 0%, rgba(0,0,0,1) 100%);
+}
 
 /* ________________________EXTRAS________________________ */
 
 .d-none{
     display: none;
+}
+.vh-100{
+    height: 100vh;
+}
+.w-100{
+    width: 100%;
+}
+.m-auto{
+    margin: auto;
+}
+.t-center{
+    text-align: center;
+}
+.excluir{
+    background-color: rgb(212, 153, 153) !important;
+    color: red !important;
+    border: 1px solid red !important;
+}
+.excluir:hover{
+    background-color: red !important;
+    color: black !important;
+    transition: all .3s;
 }
