--- a/css/todos/professor.css
+++ b/css/todos/professor.css
@@ -8,6 +8,7 @@
     margin-bottom: 10px;
 }
 .btn{
+    font-size: 1rem;
     width: 200px;
     color: white;
     padding: 10px 0;
@@ -17,10 +18,13 @@
     background-color: black;
     margin-left: calc(50% - 100px);
 }
+.btn:hover{
+    color: rgba(35,219,81,1);
+}
 .d-none{
     display: none;
 }
-form{
+form, .div-form{
     width: 510px;
     padding: 10px;
     margin-top: 50px;
@@ -77,9 +81,27 @@ p{
 .cabecalho-t-nf, th{
     padding: 1px 6px;
 }
-.notas_faltas, th{
-    border: 1px solid black;
-}
 .notas_faltas{
+    border: 1px solid black;
     margin: auto;
+}
+/*EXTRAS*/
+.borda{
+    border: 1px solid black;
+    padding: 10px;
+    margin-bottom: 50px;
+    background-color: white;
+    color: black;
+}
+.subTitle_form{
+    background-color: black;
+    color: white;
+}
+.title_form{
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: white;
+}
+.h5-p{
+    font-size: 1rem;
 }
