--- a/css/todos/aluno.css
+++ b/css/todos/aluno.css
@@ -36,10 +36,13 @@ th{
 
 /* ____________________HORARIO______________________ */
 .disciplinas{
-    width: 100%;
-    padding: 15px;
+    width: 200px;
+    margin: auto;
+    padding: 20px;
     margin-top: 20px;
+    text-align: center;
     border: 1px solid black;
+    background-color: white;
 }
 .disciplinas-siglas{
     font-weight: 700;
