--- a/css/todos/home_aluno-prof-geren.css
+++ b/css/todos/home_aluno-prof-geren.css
@@ -16,6 +16,21 @@ a{
     color: white;
     grid-template-columns: repeat(4, 1fr);
 }
+@media screen and (max-width:1200px){
+    .secao_opcoes{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media screen and (max-width:900px){
+    .secao_opcoes{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width:600px){
+    .secao_opcoes{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
 .op{
     margin: 10px;
     padding: 10px;
